--- a/link/index.html
+++ b/link/index.html
@@ -18,6 +18,7 @@
     <h4>My Friends Link 🍉</h4>
     <p>
       <a class="rainbow" target="_blank" href="https://fzf404.art/">fzf404</a>
+      <a class="blue" target="_blank" href="https://blog.kmtea.eu/">KumaTea</a>
     </p>
     <h6 class="space">
       <a class="right blue" href="..">返回</a>
