更新个人简介

--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,8 @@
     <h2>你好呀 🥵</h2>
     <h4>Octl1bra • 桑桑 🏳️‍🌈</h4>
     <p>休学高中生 无聊小透明</p>
+    <p>不是开发者 不会写代码</p>
+    <p>你爱吃炒饭吗 我爱吃炒饭</p>
     <h6>
       <a class="right blue" href="..">返回</a>
     </h6>
