--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <p>
       <a class="indigo" href="about">关于我</a>
       <a class="pink" href="link">友链</a>
-      <a class="teal" href="blog">博客</a>
+      <a class="orange" href="blog">博客</a>
+    </p>
+    <p>
+      <a class="lime" target="_blank" href="https://bonjour.bio/libra">Bonjour</a>
+      <a class="green" target="_blank" href="https://github.com/Octl1bra">Github</a>
+      <a class="cyan" target="_blank" href="https://twitter.com/Octl1bra">Twitter</a>
+      <a class="violet" target="_blank" href="mailto:sung0v0@fzf404.art">Email</a>
     </p>
   </body>
 </html>
