Create Friend Link

--- a/link/index.html
+++ b/link/index.html
@@ -19,6 +19,7 @@
     <p>
       <a class="rainbow" target="_blank" href="https://fzf404.art/">fzf404</a>
       <a class="blue" target="_blank" href="https://blog.kmtea.eu/">KumaTea</a>
+      <a class="orange" target="_blank" href="https://www.mengxiblog.top/">朱先森的笔记</a>
     </p>
     <h6 class="space">
       <a class="right blue" href="..">返回</a>
