modified:   index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a class="lime" target="_blank" href="https://bonjour.bio/libra">Bonjour</a>
       <a class="green" target="_blank" href="https://github.com/Octl1bra">Github</a>
       <a class="cyan" target="_blank" href="https://twitter.com/Octl1bra">Twitter</a>
-      <a class="violet" target="_blank" href="mailto:sung0v0@fzf404.art">Email</a>
+      <a class="violet" target="_blank" href="mailto:me@libra.wiki">Email</a>
     </p>
   </body>
 </html>
