友链更新 于长野

--- a/link/index.html
+++ b/link/index.html
@@ -17,6 +17,9 @@
     <h2>朋友们 😋</h2>
     <h4>My Friends Link 🍉</h4>
     <p>
+      <a class="gray" target="_blank" href="https://rabithua.club/">于长野</a>
+    </p>
+    <p>
       <a class="rainbow" target="_blank" href="https://fzf404.art/">fzf404</a>
       <a class="blue" target="_blank" href="https://blog.kmtea.eu/">KumaTea</a>
       <a class="orange" target="_blank" href="https://www.mengxiblog.top/">朱先森</a>
