--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
     <h4>Octl1bra • 桑桑 🏳️‍🌈</h4>
     <p>休学高中生 无聊小透明</p>
     <p>不是开发者 不会写代码</p>
+    <p>0.3个激进LGBTQ+支持者</p>
     <p>你爱吃炒饭吗 我爱吃炒饭</p>
     <h6>
       <a class="right blue" href="..">返回</a>
