--- a/link/index.html
+++ b/link/index.html
@@ -21,7 +21,7 @@
       <a class="blue" target="_blank" href="https://blog.icybit.cn">蓝冰</a>
     </p>
     <p>
-      <a class="rainbow" target="_blank" href="https://fzf404.art/">fzf404</a>
+      <a class="green" target="_blank" href="https://fzf404.art/">fzf404</a>
       <a class="indigo" target="_blank" href="https://blog.kmtea.eu/">KumaTea</a>
       <a class="orange" target="_blank" href="https://www.mengxiblog.top/">朱先森</a>
     </p>
