--- a/link/index.html
+++ b/link/index.html
@@ -25,6 +25,10 @@
       <a class="indigo" target="_blank" href="https://blog.kmtea.eu/">KumaTea</a>
       <a class="orange" target="_blank" href="https://www.mengxiblog.top/">朱先森</a>
     </p>
+    <p>
+      <a class="pink" target="_blank" href="https://mou.best/">Xiaomouz</a>
+      <a class="yellow" target="_blank" href="https://blog.lind0.space/">炸鸡店🍗</a>
+    </p>
     <h6 class="space">
       <a class="right blue" href="..">返回</a>
     </h6>
