--- a/link/index.html
+++ b/link/index.html
@@ -19,6 +19,7 @@
     <p>
       <a class="cyan" target="_blank" href="https://rabithua.club/">于长野</a>
       <a class="blue" target="_blank" href="https://blog.icybit.cn">蓝冰</a>
+      <a class="green" target="_blank" href="https://oreki.cool">Oreki</a>
     </p>
     <p>
       <a class="green" target="_blank" href="https://fzf404.art/">fzf404</a>
